--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
              <div class="col"></div>
              <div class="col"></div>
              <div class="col"></div>
-             <div class="col"></div>
+<!--              <div class="col"></div> -->
              
          </div>
          </div>
